--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "require": {
         "php"                       : ">=5.3.0",
         "composer/installers"       : ">=1.0",
-        "silverstripe/framework"    : "3.*@dev",
-        "silverstripe/cms"          : "3.*@dev",
-        "azt3k/abc-silverstripe"    : "*@stable"
+        "silverstripe/framework"    : "3.*",
+        "silverstripe/cms"          : "3.*",
+        "azt3k/abc-silverstripe"    : "*"
     }
 }
