--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
     "name": "azt3k/abc-silverstripe-taggable",
     "description": "Add tags to SilverStripe DataObjects",
-    "license": "BSD",
+    "license": "BSD-3-Clause-Clear",
     "type": "silverstripe-module",
     "authors": [
         {
             "name": "Aaron Latham-Ilari",
-            "email": "abcdigital@abcdigital.co.nz"
+            "email": "az@dev-io.us"
         }
     ],
     "minimum-stability": "dev",
